--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-plugin-prismjs": "^1.0.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "install": "^0.12.2",
+    "moment": "^2.23.0",
+    "npm": "^6.5.0",
+    "numeral": "^2.0.6",
+    "prismjs": "^1.15.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "v-runtime-template": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-codemirror": "^4.0.6",
+    "vue-highlightjs": "^1.3.3",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -16,7 +30,7 @@
     "@vue/cli-service": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.19"
   },
   "postcss": {
     "plugins": {
